objects/HB_Round_Robin__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Lead_Received_Date_Time__c</fullName>
        <label>Last Lead Received Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>HB Round Robins</relationshipLabel>
        <relationshipName>HB_Round_Robin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Lab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Lab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HB_Round_Robins</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>HB Round Robin</label>
    <listViews>
        <fullName>HB_Round_Robin_Assignment_List</fullName>
        <columns>User__c</columns>
        <columns>Active__c</columns>
        <columns>Last_Lead_Received_Date_Time__c</columns>
        <columns>Lead__c</columns>
        <columns>Sales_Lab__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>HB Round Robin Assignment List</label>
    </listViews>
    <nameField>
        <displayFormat>HBRR-{000}</displayFormat>
        <label>HB Round Robin Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HB Round Robin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>